--- a/examples/todo-app/package.json
+++ b/examples/todo-app/package.json
@@ -1,25 +1,18 @@
 {
-  "name": "react-transient-data-provider",
+  "name": "todo-app",
   "version": "0.1.0",
-  "main": "lib/index.js",
+  "private": true,
   "dependencies": {
-    "@types/jest": "24.0.22",
-    "@types/node": "12.12.6",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.4",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
-    "rxjs": "^6.5.3",
-    "typescript": "3.7.2"
+    "react-transient-data-provider": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "tsc",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prepare": "npm run build",
-    "postversion": "git push && git push --tags"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
