--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,32 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
+    "sourceMap": true,
+    "noImplicitAny": false,
     "module": "esnext",
+    "target": "es6",
+    "baseUrl": "./src",
+    "lib": [
+      "es2015",
+      "es2017",
+      "dom"
+    ],
+    "esModuleInterop": true,
+    "removeComments": true,
+    "allowSyntheticDefaultImports": true,
+    "jsx": "react",
+    "allowJs": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
+    "isolatedModules": false,
+    "noEmit": false,
+    "outDir": "./lib"
   },
   "include": [
     "src"
+  ],
+  "exclude": [
   ]
 }
